# radar-module-communications-package

./: ld2410c Debug.bat  ld2410c grapher.bat  ld2450 Debug.bat  ld2450 grapher.bat  states.json
Datasheets/HLK-2410C/: Important Characteristics.txt
Datasheets/HLK-2450/: Important Characteristics.txt
Datasheets/MP340/: Preview YouTube video MP340 FSK Radar Evaluation Kit IntroMP340 FSK Radar Evaluation Kit Intro.url
Drivers/VL53L1X Driver/Example/: Makefile
Drivers/VL53L1X Driver/vl53l1x-web-documentation/docs.ros.org/en/noetic/api/cpp_common/html/: classros_1_1Exception-members.html  classros_1_1Exception.html  classros_1_1Header-members.html  classros_1_1Header.html  debug_8cpp.html  (+27 more)
Logic Captures/: PIC16F18325 GPIO fix.sal  PIC16F18325 I2C C0&1 High].sal  PIC16F18325 I2C Diagnostic.sal  VL534L1x Startup and ranging.sal
Module Communication Packages/HKL-LD2410C/: test_visualizer.py
Module Communication Packages/HLK-LD2450/: RadarConfiguration.py  radar_2450_grapher(2).py
Module Communication Packages/Rd-03E/rd03e_python/: README.md  rd03e_analyzer.py  requirements.txt
Module Communication Packages/Rd-03E/rd03e_radar/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  rd03e_driver.cpp  rd03e_driver.h  rd03e_radar.pro
Module Communication Packages/multi_radar_analyzer/multi_radar/: README.md  multi_radar_analyzer.py  requirements.txt
Python Communication/HKL-LD2410C/: ld2410.py
Python Communication/HLK-LD2450/: plot_targets.py  print_targets.py  test_visualizer.py
tests/: ld2410c_test_002.json  ld2450_test_001.json  test_001.json
(+1375 files in other folders)
